<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="35sp" />

    <View style="@style/Line"
        android:layout_height="1dp"
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"> </View>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintTop_toTopOf="@+id/view"
        android:layout_marginTop="8dp"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rules_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:lineSpacingExtra="2sp"
                android:layout_marginTop="10dp"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rules_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:lineSpacingExtra="2sp"
                android:layout_marginTop="20dp"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rules_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:lineSpacingExtra="2sp"
                android:layout_marginTop="20dp"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rules_4"
                android:layout_marginTop="5dp"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rules_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:lineSpacingExtra="2sp"
                android:layout_marginTop="20dp"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rules_6"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:lineSpacingExtra="2sp"
                android:layout_marginTop="20dp"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>