<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/join_by_id_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="35sp" />

    <EditText
        android:layout_width="0dp"
        android:background="#8c8c8c"
        android:inputType="number"
        android:hint="@string/enter_id"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginStart="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="50dp"
        android:textColor="@android:color/white"
        style="@android:style/TextAppearance.DeviceDefault.Widget.EditText"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.66"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:text="@string/join"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginEnd="60dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="60dp"
        android:layout_width="100dp"
        android:textSize="16sp" />
</android.support.constraint.ConstraintLayout>