<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.patricklowry.baserun.GameScreen" >

    <TextView
        android:text="@string/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginTop="8dp"
        map:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        map:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        map:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:text="@string/red"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginTop="8dp"
        map:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="40dp"
        map:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:background="@android:color/holo_red_dark"
        android:layout_width="80dp" />

    <TextView
        android:text="@string/blue"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:background="?attr/actionModeSplitBackground"
        android:textAlignment="textEnd"
        android:layout_marginEnd="40dp"
        map:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        map:layout_constraintTop_toTopOf="parent"
        android:layout_width="80dp" />

    <View style="@style/Line"
        android:layout_height="1dp"
        android:layout_width="0dp"
        android:id="@+id/view"
        android:layout_marginStart="32dp"
        map:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        map:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        map:layout_constraintTop_toBottomOf="@+id/textView9"></View>
</android.support.constraint.ConstraintLayout>
